bug - banner content clipped on smaller viewport

--- a/_assets/sass/page/_banner.scss
+++ b/_assets/sass/page/_banner.scss
@@ -7,14 +7,14 @@
   flex-direction: column;
   justify-content: flex-start;
   height: 100%;
-  min-height: 450px;
-  max-height: 700px;
+  min-height: 720px;
+  max-height: 800px;
   color: $white;
   background-color: $grey;
   @include bp($lg){
     height: 90%;
     height: calc(100% - #{$core-nav-height});
-    min-height: 650px;
+    min-height: 900px;
     max-height: 1080px;
   }
   &__wrap {
